# RayTracing

./: CMakeLists.txt  LICENSE  image.ppm  main.cpp
Custom/: camera.h  color.h  dielectric.h  hittable.h  hittable_list.h  lambertian.h  material.h  metal.h  moving_sphere.h  ray.h  rtweekend.h  sphere.h  vec3.h
